# CashManager

./: README.md  setup.sh
Components/Client/: CMakeLists.txt
Components/Client/doc/: NetworkAPI.puml
Components/Client/doc/uml/class/: client.puml  exceptions.puml
Components/Client/doc/uml/class/patterns/: Singleton_Settings.puml
Components/Client/doc/uml/class/patterns/Decorators/: Cashier.puml  MobileTerminalPayment.puml
Components/Client/doc/uml/class/patterns/Factory/: RequestFactory.puml
Components/Client/doc/uml/class/patterns/Observator/: Bill.puml  MobilePaymentTerminal.puml  PaymentStatus.puml
Components/Client/doc/uml/patterns/: Factory.puml  Observators.puml  StateMachine.puml  mvc.puml
Components/Client/include/: exception.hpp
Components/Client/include/Conf/: AssetsPath.hpp  ConnexionsSettings.hpp
Components/Client/include/Core/: ArticleGenerator.hpp  CashManager.hpp  ChequeInformationGenerator.hpp  PaymentOrder.hpp  PaymentStatus.hpp
Components/Client/include/Exceptions/: conf.hpp  core.hpp  exception.hpp
Components/Client/include/Network/: ARequest.hpp  BankAPI.hpp  NetworkAPI.hpp  NetworkInfo.hpp  README.md  RequestErrors.hpp  WarehouseAPI.hpp
Components/Client/include/Network/Request/: Article.hpp  ArticleList.hpp  ArticleScan.hpp  Authenticate.hpp  BankCheck.hpp  CardPayment.hpp  CardPaymentContactless.hpp  RequestFactory.hpp
Components/Client/include/Tools/: Observer.hpp  Singleton.hpp  Subject.hpp
Components/Client/include/Tools/Log/: Idx.hpp  Initializer.hpp  PLogConsoleFormatter.hpp
Components/Client/include/Windows/Bill/: Bill.hpp  BillConfiguration.hpp  CurrencyConfiguration.hpp
Components/Client/include/Windows/Bill/Widgets/: LCDBill.hpp
Components/Client/include/Windows/Cashier/: Cashier.hpp
Components/Client/include/Windows/Cashier/Dialogs/: CashMountNumberHandler.hpp  CashPaymentDialog.hpp  ChequePaymentDialog.hpp  CreditCardDialog.hpp  SettingDialog.hpp
Components/Client/include/Windows/Cashier/Widgets/: CashierScreen.hpp
Components/Client/include/Windows/PaymentTerminal/: PaymentTerminal.hpp
Components/Client/include/Windows/PaymentTerminal/Widgets/: CodePinHandler.hpp  ContactLess.hpp  PaymentTerminalScreen.hpp
Components/Client/src/: main.cpp
Components/Client/src/Core/: ArticleGenerator.cpp  CashManager.cpp  ChequeInformationGenerator.cpp
Components/Client/src/Network/: ARequest.cpp  BankAPI.cpp  NetworkAPI.cpp  RequestFactory.cpp  WarehouseAPI.cpp
Components/Client/src/Network/Request/: Article.cpp  ArticleList.cpp  ArticleScan.cpp  Authenticate.cpp  BankCheck.cpp  CardPayment.cpp  CardPaymentContactless.cpp
Components/Client/src/Windows/Bill/: Bill.cpp
Components/Client/src/Windows/Bill/Widgets/: LCDBill.cpp
Components/Client/src/Windows/Cashier/: Cashier.cpp
Components/Client/src/Windows/Cashier/Dialogs/: CashMountNumberHandler.cpp  CashPaymentDialog.cpp  ChequePaymentDialog.cpp  CreditCardDialog.cpp  SettingDialog.cpp
Components/Client/src/Windows/Cashier/Widgets/: CashierScreen.cpp
Components/Client/src/Windows/PaymentTerminal/: PaymentTerminal.cpp
Components/Client/src/Windows/PaymentTerminal/Widgets/: CodePinHandler.cpp  PaymentTerminalScreen.cpp
Components/Client/test/include/: UTWorkDirectory.hpp
Components/Client/test/src/: main.cpp
Components/Client/test/src/Exceptions/: ExceptionTest.cpp
Components/Client/test/src/Network/BankAPI/: AuthenticateTest.cpp  CardPaymentContactLessTest.cpp  CardPaymentTest.cpp  CheckPaymentTest.cpp
Components/Client/test/src/Network/WarehouseAPI/: ArticleListTest.cpp  ArticleScanTest.cpp
Components/Client/test/src/Tools/: LogTest.cpp
Components/Client/test/src/Windows/Bill/Widgets/: LCDBillTest.cpp
Components/Server/: Makefile  README.md  docker-compose.yml
Components/Server/server_bank/: Dockerfile  requirements.txt  runserver.py  test.py
Components/Server/server_bank/server_bank/: __init__.py
Components/Server/server_bank/server_bank/models/: Banned.py  Transaction.py  TransactionToken.py  __init__.py
Components/Server/server_bank/server_bank/views/: __init__.py  payment.py
Components/Server/server_warehouse/: Dockerfile  requirements.txt  runserver.py  test.py
Components/Server/server_warehouse/server_warehouse/: __init__.py
Components/Server/server_warehouse/server_warehouse/models/: Article.py  __init__.py
Components/Server/server_warehouse/server_warehouse/views/: __init__.py  warehouse.py
Documentations/: RFC- Protocol.txt  Template-Software-Architecture-Specifications-V2-CashManager.docx  Template-Software-Qualification-Specifications-Acceptance-V2-CashManager.docx  Template-Software-Qualification-Specifications-V2-CashManager.docx
Setup/: build_app.sh  build_libs.sh
